<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Berlin Music Player</string>

    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>

    <string name="end">end</string>
    <string name="start">start</string>
    <string name="start_time" translatable="false">0:00</string>
    <string name="albumart">Album Art</string>

    <string name="rio_reiser">Rio Reiser</string>
    <string name="rauch_haus_song">Rauch-Haus-Song</string>

    <string name="fernsehturm">fernsehturm</string>

    <string name="alben">Alben</string>

    <string name="funkturm">Funkturm</string>

    <string name="action_shuffle_all">Alles Zufällig Abspielen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loeschen">Loeschen</string>
    <string name="suche">Suche</string>
    <string name="sort_by">Sortieren</string>
    <string name="alphabetic">Alphabetisch</string>
    <string name="date">Datum</string>
    <string name="by_size">Größe</string>
    <string name="ton_steine_scherben">Ton Steine Scherben</string>
    <string name="_1" translatable="false">1</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="zur_playlist_hinzufuegen">Zur Playlist hinzufügen</string>
    <string name="album" translatable="false">Album</string>
    <string name="kuenstler">Künstler</string>
    <string name="interpr">Interpret</string>
    <string name="interpret">Interpret</string>
    <string name="add_to_playlist">add_2_playlist</string>
    <string name="year">Year</string>
    <string name="unbekanntes_jahr">Unbekanntes Jahr</string>
    <string name="unbekanntes_album">Kein Albumname</string>
    <string name="artist">Interpret</string>
    <string name="player_design">Player Design</string>
    <string name="teilen">Teilen</string>
    <string name="equalizer">Equalizer</string>
    <string name="sleep_timer">Schlaf-Modus</string>
    <string name="import_playlists">import_playlists_from_phone</string>


</resources>
