<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_open_album"
        android:title="@string/album"
        android:icon="@drawable/ic_baer"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_open_artist"
        android:title="@string/artist"
        android:icon="@drawable/ic_adler"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search_option"
        android:title="@string/suche"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/player_design"
        android:title="@string/player_design"
        android:icon="@drawable/ic_baer"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/teilen"
        android:icon="@drawable/ic_adler"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_equalizer"
        android:title="@string/equalizer"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_sleep_timer"
        android:title="@string/sleep_timer"
        android:showAsAction="never"/>
</menu>